--- a/package.json
+++ b/package.json
@@ -3,62 +3,61 @@
 	"version": "0.0.0",
 	"private": true,
 	"dependencies": {
-		"@hookform/resolvers": "3.2.0",
-		"@radix-ui/react-dialog": "1.0.4",
-		"@radix-ui/react-popover": "1.0.6",
-		"@vanilla-extract/css": "1.11.0",
-		"@vanilla-extract/dynamic": "2.0.3",
-		"@vanilla-extract/recipes": "0.4.0",
-		"@vanilla-extract/sprinkles": "1.6.0",
-		"clsx": "1.2.1",
-		"contentful": "10.3.1",
-		"dotenv": "16.0.1",
-		"next": "13.4.7",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-error-boundary": "^4.0.10",
-		"react-hook-form": "7.45.4",
-		"react-nanny": "2.15.0",
-		"react-number-format": "5.2.2",
-		"sharp": "^0.32.1",
-		"zod": "3.22.1"
+		"@hookform/resolvers": "^3.3.2",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@vanilla-extract/css": "^1.13.0",
+		"@vanilla-extract/dynamic": "^2.0.3",
+		"@vanilla-extract/recipes": "^0.5.0",
+		"@vanilla-extract/sprinkles": "^1.6.1",
+		"clsx": "^2.0.0",
+		"dotenv": "^16.3.1",
+		"next": "^13.5.6",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-error-boundary": "^4.0.11",
+		"react-hook-form": "^7.47.0",
+		"react-nanny": "^2.15.0",
+		"react-number-format": "^5.3.1",
+		"sharp": "^0.32.6",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@hookform/devtools": "^4.3.1",
-		"@next/bundle-analyzer": "12.1.6",
-		"@storybook/addon-essentials": "^7.0.8",
-		"@storybook/addon-interactions": "^7.0.8",
-		"@storybook/addon-links": "^7.0.8",
-		"@storybook/blocks": "^7.0.8",
-		"@storybook/nextjs": "^7.0.8",
-		"@storybook/react": "^7.0.8",
-		"@storybook/testing-library": "^0.0.14-next.2",
-		"@svgr/webpack": "8.0.1",
-		"@types/node": "18.0.0",
-		"@types/react": "18.2.21",
+		"@next/bundle-analyzer": "13.5.6",
+		"@storybook/addon-essentials": "^7.5.1",
+		"@storybook/addon-interactions": "^7.5.1",
+		"@storybook/addon-links": "^7.5.1",
+		"@storybook/blocks": "^7.5.1",
+		"@storybook/nextjs": "^7.5.1",
+		"@storybook/react": "^7.5.1",
+		"@storybook/testing-library": "^0.2.2",
+		"@svgr/webpack": "8.1.0",
+		"@types/node": "20.8.7",
+		"@types/react": "18.2.31",
 		"@typescript-eslint/eslint-plugin": "^6.6.0",
 		"@typescript-eslint/parser": "^6.6.0",
-		"@vanilla-extract/next-plugin": "2.1.2",
-		"@vanilla-extract/webpack-plugin": "^2.2.0",
+		"@vanilla-extract/next-plugin": "2.3.1",
+		"@vanilla-extract/webpack-plugin": "^2.3.1",
 		"cross-env": "7.0.3",
-		"eslint": "8.28.0",
+		"eslint": "8.52.0",
 		"eslint-config-airbnb": "19.0.4",
-		"eslint-config-next": "13.0.5",
-		"eslint-config-prettier": "8.5.0",
+		"eslint-config-next": "13.5.6",
+		"eslint-config-prettier": "9.0.0",
 		"eslint-import-resolver-typescript": "^3.6.0",
 		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-jsx-a11y": "6.5.1",
-		"eslint-plugin-mdx": "^2.1.0",
-		"eslint-plugin-prettier": "4.0.0",
-		"eslint-plugin-react": "7.30.1",
+		"eslint-plugin-jsx-a11y": "6.7.1",
+		"eslint-plugin-mdx": "^2.2.0",
+		"eslint-plugin-prettier": "5.0.1",
+		"eslint-plugin-react": "7.33.2",
 		"eslint-plugin-react-hooks": "4.6.0",
-		"eslint-plugin-security": "1.5.0",
-		"eslint-plugin-sonarjs": "0.16.0",
-		"husky": "8.0.1",
-		"lint-staged": "13.0.4",
-		"mini-css-extract-plugin": "1.6.2",
-		"prettier": "2.8.0",
-		"storybook": "^7.0.8",
+		"eslint-plugin-security": "1.7.1",
+		"eslint-plugin-sonarjs": "0.21.0",
+		"husky": "^8.0.3",
+		"lint-staged": "15.0.2",
+		"mini-css-extract-plugin": "2.7.6",
+		"prettier": "^3.0.3",
+		"storybook": "^7.5.1",
 		"typescript": "5.2.2"
 	},
 	"husky": {
