--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"clsx": "^2.0.0",
 		"dotenv": "^16.3.1",
 		"next": "^13.5.6",
+		"next-intl": "^2.21.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^4.0.11",
@@ -54,7 +55,7 @@
 		"eslint-plugin-security": "1.7.1",
 		"eslint-plugin-sonarjs": "0.21.0",
 		"husky": "^8.0.3",
-		"lint-staged": "15.0.2",
+		"lint-staged": "13.0.4",
 		"mini-css-extract-plugin": "2.7.6",
 		"prettier": "^3.0.3",
 		"storybook": "^7.5.1",
@@ -82,5 +83,8 @@
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
 		"types:contentful": "export $(cat .env | awk '!/^\\s*#/' | awk '!/^\\s*$/'); cf-content-types-generator --spaceId $CONTENTFUL_SPACE_ID --token $CONTENTFUL_MANAGEMENT_TOKEN -o src/contentful/types -X && prettier --write src/services/contentful/types"
+	},
+	"resolutions": {
+		"jackspeak": "2.1.1"
 	}
 }
