--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@hookform/resolvers": "^3.3.2",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-popover": "^1.0.7",
+		"@tanstack/react-table": "^8.10.7",
 		"@vanilla-extract/css": "^1.13.0",
 		"@vanilla-extract/dynamic": "^2.0.3",
 		"@vanilla-extract/recipes": "^0.5.0",
