--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,60 +1,41 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "noUnusedLocals": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "baseUrl": "./src",
-    "incremental": true,
-    "paths": {
-      "public/*": ["../public/*"],
-      "@/components/*": ["./components/*"],
-      "@/style/*": ["./style/*"],
-      "@/services/*": ["./services/*"],
-      "@/contentful/*": ["./contentful/*"],
-      "@/hooks/*": ["./hooks/*"],
-      "@/types/*": ["./types/*"],
-      "@/utils/*": ["./utils/*"],
-    },
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
-  },
-  "mdx": {
-    "plugins": [
-      [
-        "remark-frontmatter",
-        [
-          "toml",
-          "yaml"
-        ]
-      ],
-      "remark-gfm"
-    ]
-  },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+	"compilerOptions": {
+		"target": "es5",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"skipLibCheck": true,
+		"noUnusedLocals": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"noEmit": true,
+		"esModuleInterop": true,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"jsx": "preserve",
+		"baseUrl": "./src",
+		"incremental": true,
+		"paths": {
+			"public/*": ["../public/*"],
+			"@/components/*": ["./components/*"],
+			"@/style/*": ["./style/*"],
+			"@/services/*": ["./services/*"],
+			"@/contentful/*": ["./contentful/*"],
+			"@/hooks/*": ["./hooks/*"],
+			"@/types/*": ["./types/*"],
+			"@/utils/*": ["./utils/*"],
+			"@/store/*": ["./store/*"]
+		},
+		"plugins": [
+			{
+				"name": "next"
+			}
+		]
+	},
+	"mdx": {
+		"plugins": [["remark-frontmatter", ["toml", "yaml"]], "remark-gfm"]
+	},
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"exclude": ["node_modules"]
 }
