--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
+		"types": ["node"],
 		"jsx": "preserve",
 		"baseUrl": "./src",
 		"incremental": true,
