--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@tanstack/react-table": "^8.10.7",
+		"@types/react-beautiful-dnd": "^13.1.7",
 		"@vanilla-extract/css": "^1.13.0",
 		"@vanilla-extract/dynamic": "^2.0.3",
 		"@vanilla-extract/recipes": "^0.5.0",
 		"@vanilla-extract/sprinkles": "^1.6.1",
 		"clsx": "^2.0.0",
 		"dotenv": "^16.3.1",
-		"next": "^14.0.0",
+		"next": "^14.0.3",
 		"next-intl": "^2.21.0",
 		"query-string": "^8.1.0",
 		"react": "^18.2.0",
+		"react-beautiful-dnd": "^13.1.1",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^4.0.11",
 		"react-hook-form": "^7.47.0",
