added branch name on index page

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@tanstack/react-table": "^8.10.7",
+		"@types/git-rev-sync": "^2.0.2",
 		"@types/react-beautiful-dnd": "^13.1.7",
 		"@vanilla-extract/css": "^1.13.0",
 		"@vanilla-extract/dynamic": "^2.0.3",
@@ -14,6 +15,7 @@
 		"@vanilla-extract/sprinkles": "^1.6.1",
 		"clsx": "^2.0.0",
 		"dotenv": "^16.3.1",
+		"git-rev-sync": "^3.0.2",
 		"next": "^14.0.3",
 		"next-intl": "^2.21.0",
 		"query-string": "^8.1.0",
