--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@vanilla-extract/dynamic": "^2.0.3",
 		"@vanilla-extract/recipes": "^0.5.0",
 		"@vanilla-extract/sprinkles": "^1.6.1",
+		"axios": "^1.6.2",
 		"clsx": "^2.0.0",
 		"dotenv": "^16.3.1",
 		"next": "^14.0.3",
@@ -24,6 +25,7 @@
 		"react-hook-form": "^7.47.0",
 		"react-nanny": "^2.15.0",
 		"react-number-format": "^5.3.1",
+		"react-query": "^3.39.3",
 		"rooks": "^7.14.1",
 		"sharp": "^0.32.6",
 		"zod": "^3.22.4",
