--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"clsx": "^2.0.0",
 		"dotenv": "^16.3.1",
 		"next": "^14.0.3",
+		"next-auth": "^4.24.5",
 		"next-intl": "^2.21.0",
 		"query-string": "^8.1.0",
 		"react": "^18.2.0",
@@ -25,7 +26,6 @@
 		"react-hook-form": "^7.47.0",
 		"react-nanny": "^2.15.0",
 		"react-number-format": "^5.3.1",
-		"react-query": "^3.39.3",
 		"rooks": "^7.14.1",
 		"sharp": "^0.32.6",
 		"zod": "^3.22.4",
