--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@tanstack/react-table": "^8.10.7",
+		"@types/js-cookie": "^3.0.6",
 		"@types/react-beautiful-dnd": "^13.1.7",
 		"@vanilla-extract/css": "^1.13.0",
 		"@vanilla-extract/dynamic": "^2.0.3",
@@ -15,6 +16,7 @@
 		"axios": "^1.6.2",
 		"clsx": "^2.0.0",
 		"dotenv": "^16.3.1",
+		"js-cookie": "^3.0.5",
 		"next": "^14.0.3",
 		"next-auth": "^4.24.5",
 		"next-intl": "^2.21.0",
