--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-hook-form": "^7.47.0",
 		"react-nanny": "^2.15.0",
 		"react-number-format": "^5.3.1",
+		"react-quill": "^2.0.0",
 		"react-toastify": "^10.0.4",
 		"rooks": "^7.14.1",
 		"sharp": "^0.32.6",
