--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-API_BASE_URL='https://{API_BASE_URL}'
+NEXT_PUBLIC_API_BASE_URL='https://{NEXT_PUBLIC_API_BASE_URL}'
 HOST={HOST}
 ANALYZE={'true'/'false'}
