--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
+NEXTAUTH_SECRET=NEXTAUTH_SECRET=pI4QZ379Pz4s*h7NGL8PD5WkUsZWfwGU5tzOTz7%zbjO0
+NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_API_BASE_URL='https://barnahus-journeys-be-dev-pjqvrfz4wa-lz.a.run.app/'
+APP_ENV = local
