--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXTAUTH_SECRET=NEXTAUTH_SECRET=pI4QZ379Pz4s*h7NGL8PD5WkUsZWfwGU5tzOTz7%zbjO0
 NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_API_BASE_URL='https://dev-new.app.barnahus.eu/api/'
+NEXT_PUBLIC_API_BASE_URL_LOCAL='http://localhost:3000/'
 APP_ENV = local
