--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,19 @@
 steps:
+  # Step 1: Create .env file with multiple secrets
   - name: 'alpine'
     entrypoint: 'sh'
     args:
       - '-c'
       - |
-        echo "NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL" > .env
-        echo "NEXTAUTH_SECRET=$NEXTAUTH_SECRET" >> .env
-        echo "ANALYZE=$ANALYZE" >> .env
+        echo "NEXT_PUBLIC_API_BASE_URL=$$NEXT_PUBLIC_API_BASE_URL" > .env
+        echo "NEXTAUTH_SECRET=$$NEXTAUTH_SECRET" >> .env
+        echo "ANALYZE=$$ANALYZE" >> .env
     secretEnv:
       - NEXT_PUBLIC_API_BASE_URL
       - NEXTAUTH_SECRET
       - ANALYZE
 
+  # Step 2: Docker build, passing the .env file as build argument
   - name: gcr.io/cloud-builders/docker
     args:
       - build
@@ -22,14 +24,17 @@ steps:
       - .
       - '-f'
       - Dockerfile
+      - '--build-arg'
       - 'ENV_FILE=.env'
     id: Build
+
   - name: gcr.io/cloud-builders/docker
     args:
       - push
       - >-
         $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
     id: Push
+
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
     args:
       - run
@@ -46,17 +51,21 @@ steps:
       - '--revision-suffix=$SHORT_SHA'
     id: Deploy
     entrypoint: gcloud
+
 images:
   - >-
     $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
+
 options:
   substitutionOption: ALLOW_LOOSE
   logging: CLOUD_LOGGING_ONLY
+
 substitutions:
   _AR_HOSTNAME: europe-north1-docker.pkg.dev
   _PLATFORM: managed
   _DEPLOY_REGION: europe-north1
   _SERVICE_NAME: barnahus-journeys-fe-dev
+
 tags:
   - gcp-cloud-build-deploy-cloud-run
   - gcp-cloud-build-deploy-cloud-run-managed
