--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ NEXT_PUBLIC_API_BASE_URL='https://barnahus-journeys-be-dev-232931877685.europe-n
 NEXT_PUBLIC_API_BASE_URL_OLD@='https://dev-new.app.barnahus.eu/api/'
 NEXT_PUBLIC_API_BASE_URL_OLD='https://barnahus-journeys-be-dev-pjqvrfz4wa-lz.a.run.app/'
 NEXT_PUBLIC_API_BASE_URL_NEW='https://dev-new.app.barnahus.eu/api/'
-NEXT_PUBLIC_API_BASE_URL_LOCAL='http://localhost:3001/'
+NEXT_PUBLIC_API_BASE_URL_NEW_NEW='https://barnahus-journeys-be-dev-232931877685.europe-north1.run.app/'
+NEXT_PUBLIC_API_BASE_URL_LOCAL='http://localhost:3000/'
 APP_ENV = local
