--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@hookform/resolvers": "^3.3.2",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-table": "^8.10.7",
 		"@types/js-cookie": "^3.0.6",
 		"@types/react-beautiful-dnd": "^13.1.7",
